<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/textView_serviceName"
        android:layout_width="wrap_content"
        android:layout_height="48.0dip"
        android:gravity="center_vertical"
        android:text="@string/ariaGestureServiceName"
        android:textAppearance="@style/subheader" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_serviceName"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/button_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_arrow_upward_black_24dp"
            android:text="@string/aria_button_up" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_back_black_24dp"
                android:text="@string/aria_button_left" />

            <Button
                android:id="@+id/button_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_downward_black_24dp"
                android:text="@string/aria_button_down" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
                android:text="@string/aria_button_right" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>